# pandas_pydantic_project

./: README.md  pyproject.toml
data/: sample.csv
src/: main.py  models.py  utils.py
